portal/css/msd.css
@charset "utf-8";
/*******************************************************************/
/* START OF MSD styles
/*******************************************************************/

body {
margin:3px;
padding:3px;
font-family:"Helvetica Neue","Lucida Grande",Helvetica,Arial,"Nimbus Sans L",Verdana,sans-serif;
font-size:80%;
line-height:1.5;
border: none;
}

h3 {
border-bottom:2px solid #5A82AD;
/*color:#1E4268;
font-size:1.4em;
font-weight:normal;
letter-spacing:1px;*/
padding-bottom:2px;
padding-top:1.5em;
/*text-transform:uppercase;*/
margin:0;
}

h3 a:visited, h3 a:link{
color:#1E4268;
text-decoration:none !important;
}

h3 a:hover {
color:#000000;
text-decoration:none !important;
}

.menuitems{
line-height:1em;
list-style-image:none;
list-style-position:outside;
list-style-type:none; 
/*padding:0 0 0 0;*/
padding-left: 0;
margin:0;
}

.menuitems li{
display:inline;
margin:0;
padding:0;
}

.menuitems a:visited, .menuitems a:link{
border-bottom:1px solid #DDDDDD;
display:block;
padding-bottom:6px; 
padding-top:5px; 
text-decoration:none !important;
color:#303030;
}

.menuitems a:hover {
border-bottom:1px solid #000000;
display:block;
padding-bottom:6px; 
padding-top:5px; 
text-decoration:none !important;
color:#303030;
}
.menuitems a.disabled {
	color: #aaa;
}
.menuitems a.disabled:hover {
	border-bottom:1px solid #DDDDDD;
}

img.column-image{
	margin-top:56px;
}


#footer a{
border-bottom:1px solid #DDDDDD;
text-decoration:none;
color:#303030;
}

#footer a:hover {
border-bottom:1px solid #000000;
text-decoration:none;
color:#303030;
}

.caption{
    cursor: pointer;
    position: absolute !important;
    bottom:0;
	height:100%;
    width:100%;
    background-color: rgba(0,0,0,0);
    opacity: 0;
    -webkit-transition:all 0.45s ease-in-out;
    -moz-transition:all 0.45s ease-in-out;
    -o-transition:all 0.45s ease-in-out;
    -ms-transition:all 0.45s ease-in-out;
    transition:all 0.45s ease-in-out;
}
.caption:hover{
    opacity: 1;
}
.caption-text{
    position: absolute !important;
    height:50px;
    width:100%;
    bottom:0;
    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,7db9e8+100&amp;1+0,0+90 */
    background: -moz-linear-gradient(left,  rgba(0,0,0,1) 0%, rgba(113,167,209,0) 90%, rgba(125,185,232,0) 100%); /* FF3.6-15 */
    background: -webkit-linear-gradient(left,  rgba(0,0,0,1) 0%,rgba(113,167,209,0) 90%,rgba(125,185,232,0) 100%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to right,  rgba(0,0,0,1) 0%,rgba(113,167,209,0) 90%,rgba(125,185,232,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#007db9e8',GradientType=1 ); /* IE6-9 */
    color: #fff;
    text-align: left;
    padding-left: 15px;
    overflow: hidden;
} 
.caption-text-content{
   padding-top: 5px;
   padding-right: 20px;
   overflow: hidden;
}

/*******************************************************************/
/* END OF MSD styles
/*******************************************************************/

